Fix author footer layout on mobile

--- a/assets/css/lanyon.css
+++ b/assets/css/lanyon.css
@@ -657,8 +657,10 @@ a.pagination-item:hover {
   color: #9EABB3;
 }
 
-.author-brief {
-  float: left;
+@media (min-width: 56em) {
+  .author-brief {
+    float: left;
+  }
 }
 
 .post-footer h4 a {
@@ -674,20 +676,33 @@ a.pagination-item:hover {
 /* Share links */
 
 .post-footer .share {
-  float: right;
-  text-align: right;
   padding: 0;
-  margin: 0;
+  margin-top: 1rem;
   font-size: 1rem;
   font-style: italic;
   line-height: 1.5;
   color: #9EABB3;
 }
 
+@media (min-width: 56em) {
+  .post-footer .share {
+    float: right;
+    text-align: right;
+    margin: 0;
+  }
+}
+
 .post-footer .share .share-icon {
-  margin-left: 1em;
+  margin-right: 1em;
   color: #268bd2;
   text-decoration: none !important;
+}
+
+@media (min-width: 56em) {
+  .post-footer .share .share-icon {
+    margin-left: 1em;
+    margin-right: 0;
+  }
 }
 
 .tag-head.main-header {
